<resources>
    <string name="app_name">CafBible</string>
    <string name="title_menu">Menu</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_profile">Profile</string>
    <string name = "current_date">November 5, 2023</string>
    <string name="content_description_default">default image</string>
    <string name="user_firstName">First Name</string>
    <string name="user_lastName">Last Name</string>
    <string name="section_mealPlan">Meal Plan</string>
    <string name = "breakfast_text">Breakfast</string>
    <string name = "lunch_text">Lunch</string>
    <string name = "dinner_text">Dinner</string>
    <string name="dinner_option">Sesame Pork Stir Fry Rice</string>
    <string name="vegan">v</string>
    <string name="gluten_free">gf</string>
    <string name="humane">H</string>
    <string name="farm_fresh">ff</string>
    <string name="locally_crafted">lc</string>
    <string name="dietary_restrictions">Dietary Restrictions</string>
    <string name="fav_meals">My Favorite Meals</string>
    <string name="edit">Edit</string>
    <string name="profile_image_desc">Profile Image</string>
    <string name="fav_meals_scroll">Scroll to choose your favorite meal</string>
    <string name="info_button">Get more info on this meal</string>
    <string name="back_info_desc">Go back</string>
    <string name="one_star">One Star</string>
    <string name="two_star">Two Stars</string>
    <string name="three_star">Three Stars</string>
    <string name="four_star">Four Stars</string>
    <string name="five_star">Five Stars</string>
    <string name="date_back_desc">Previous date</string>
    <string name="date_forward_desc">Next date</string>
    <string-array
        name="meal_plan">
        <item
            ></item>
    </string-array>
    <string name="meal_plan_default">12 Flex</string>
    <string name="location">Home Cooking</string>
    <string name="rate_this">Submit</string>
    <string name="personal_rating">Your Rating:</string>
    <string name="sampleMealName">Sample Meal</string>
    <string name="warningText">You\'ve exceeded your weekly limit</string>
    <string-array name="dropdown_schedule">
        <item>Weekly</item>
        <item>Daily</item>
    </string-array>
    <string name="breakfastTimes">7:00 AM - 11:00 AM</string>
    <string name="lunchTimes">11:00 AM - 4:00 PM</string>
    <string name="dinnerTimes">4:05 PM - 8:00 PM</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam porttitor ipsum vel elit tincidunt ultrices. Curabitur at velit tincidunt, ultricies libero sed, vehicula libero. Phasellus dignissim dui sed tellus dictum feugiat. Aenean vel purus sed dui cursus sodales at a nunc. Sed varius blandit turpis, quis fringilla orci pellentesque eget. Morbi felis lorem, auctor ac eleifend at, elementum vitae ante. Sed sed finibus dui.</string>
    <string name="scrollViewSpeakable">Scroll View Containing Meal Options</string>
    <string name="warningImageText">Warning Icon</string>
</resources>