<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Schedule.MealInfo">

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/back"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"

/>

    <TextView
        android:id="@+id/yourRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_rating"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/ingredients"
        android:layout_marginTop="20dp"
         />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:accessibilityLiveRegion="none"
        android:contentDescription="@string/back_info_desc"
        android:rotationY="180"
        android:src="@drawable/more_info_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_option"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location" />

    <ImageButton
        android:id="@+id/star2"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="248dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/gray_star"
        android:contentDescription="@string/one_star"
        app:layout_constraintStart_toEndOf="@+id/star1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/star1"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="248dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/gray_star"
        android:contentDescription="@string/two_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/star4"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="248dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/gray_star"
        android:contentDescription="@string/three_star"
        app:layout_constraintStart_toEndOf="@+id/star3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/star3"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="248dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:onClick="onClick"
        android:scaleType="fitCenter"
        android:src="@drawable/gray_star"
        android:contentDescription="@string/four_star"
        app:layout_constraintStart_toEndOf="@+id/star2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/star5"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="248dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/gray_star"
        android:contentDescription="@string/five_star"
        app:layout_constraintStart_toEndOf="@+id/star4"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="316dp"
        android:text="@string/edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>