<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile.ProfileFragment">

    <!-- Section header textView -->
    <TextView
        android:id="@+id/profileTextView"
        android:layout_width="411dp"
        android:layout_height="93dp"
        android:backgroundTint="#B6B6B6"
        android:text="@string/title_profile"
        android:textAlignment="center"
        android:textColor="#4E4E4E"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="#B6B6B6" />

    <!-- Default profile image -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/profile_default_foreground"
        app:layout_constraintEnd_toStartOf="@+id/firstNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileTextView" />

    <!-- Text area for user first name -->
    <TextView
        android:id="@+id/firstNameTextView"
        android:layout_width="205dp"
        android:layout_height="46dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/user_firstName"
        app:layout_constraintBottom_toTopOf="@+id/lastNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/profileTextView" />

    <!-- Text area for user last name -->
    <TextView
        android:id="@+id/lastNameTextView"
        android:layout_width="205dp"
        android:layout_height="57dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:text="@string/user_lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/firstNameTextView" />

    <!-- Guideline to separate meal plan section -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="299dp"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Meal plan section label -->
    <TextView
        android:id="@+id/mealPlanTextView"
        android:layout_width="191dp"
        android:layout_height="52dp"
        android:text="@string/section_mealPlan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <!-- Guideline to separate dietary restrictions section -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="350dp"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Dietary restrictions section label -->
    <TextView
        android:id="@+id/dietaryRestrictionsTextView"
        android:layout_width="193dp"
        android:layout_height="54dp"
        android:text="@string/dietary_restrictions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealPlanTextView" />

    <!-- Guideline to separate favorite meals -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="411dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="404dp"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Favorite meals section label -->
    <TextView
        android:id="@+id/favMealsTextView"
        android:layout_width="191dp"
        android:layout_height="41dp"
        android:layout_marginStart="2dp"
        android:text="@string/fav_meals"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietaryRestrictionsTextView" />

    <!-- Button to edit favorite meals -->
    <Button
        android:id="@+id/mealEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="274dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/favMealsTextView" />

    <!-- Dropdown menu for dietary restrictions -->
    <Spinner
        android:id="@+id/dietarySpinner"
        android:layout_width="413dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/dietaryRestrictionsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/dietaryRestrictionsTextView"
        app:layout_constraintVertical_bias="0.125" />

</androidx.constraintlayout.widget.ConstraintLayout>